fix(youtube): text readablity

--- a/styles/youtube/catppuccin.user.css
+++ b/styles/youtube/catppuccin.user.css
@@ -510,14 +510,9 @@
       }
     }
 
+    .ytp-right-controls svg path,
     .ytp-svg-fill {
-      fill: @text;
-    }
-
-    .ytp-right-controls {
-      svg path {
-        fill: @text !important;
-      }
+      fill: if(@lookup = latte, #000, #fff) !important;
     }
 
     .ytp-time-current,
@@ -525,7 +520,15 @@
     .ytp-time-duration,
     .ytp-menu-label-secondary,
     .ytp-menuitem-label-count {
-      color: @subtext0;
+      color: if(@lookup = latte, #000, #fff);
+    }
+    
+    .ytp-tooltip:not([aria-hidden=true]) {
+      color: @text;
+    }
+
+    .style-scope.ytd-thumbnail-overlay-toggle-button-renderer:hover {
+      fill: @accent-Color !important;
     }
 
     .style-scope.ytd-thumbnail-overlay-toggle-button-renderer:hover {
